# rpzero-usb-uart

./: CMakeLists.txt  LICENSE.md  README.md  flake.nix  uart-bridge.c
.github/workflows/: build-uf2.yml
